--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -8,6 +8,7 @@
     font-size: 50px;
     font-family: 'Orbitron', sans-serif;
     display: flex;
+    gap: 220px;
 }
 
 .profilepic {
@@ -16,7 +17,6 @@
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     transition: 0.3s;
-    margin-left: 220px;
 }
 
 .profilepic:hover {
@@ -40,7 +40,7 @@
     color: #01B9FF;
 }
 
-.about-button {
+.my-about-button {
  padding-left: 155px;
  margin-top: 20px;
 }
@@ -89,7 +89,14 @@ background-color: #0030ce;
 }
 
 #socials li a:hover {
-    background-color: #0030ce;
+    background-color: #002bb8;
 }
 
+.myIcon {
+    transition: 0.3s;
+}
+
+.myIcon:hover {
+    padding-left: 6px;
+}
 
