--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,6 @@
 
 .form-container {
     width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,6 +16,7 @@
     border-radius: 16px;
     margin-top: 80px;
     padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 input, textarea {
@@ -33,7 +33,7 @@ input, textarea {
 .contact-header {
     font-size: 40px;
     font-family: 'Orbitron', sans-serif;
-    margin-top: 100px;
+    padding-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,4 +84,12 @@ textarea {
     color: #1DDDBC;
     margin-top: 10px;
     font-family: 'Roboto', sans-serif;
+}
+
+.disclaimer-text {
+    text-align: center;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    padding-top: 40px;
 }
