--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -9,14 +9,11 @@
 .container-fluid {
     position: fixed;
     z-index: 1;
-}
-
-.navbar { 
+    min-height: 60px;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
     background-color: var(--background-color);
     font-size: 20px;
     font-family: 'Orbitron', sans-serif;
-    height: 60px;
-    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
 #navbar li a {
@@ -38,13 +35,111 @@ li {
 #navbar {
     display: flex;
     gap: 35px;
+    margin-bottom: 0px;
+    padding-top: 6px;
 }
 
-ul {
-    margin-bottom: 0 !important;
-}
+
 
 img {
     height: 24px;
     width: 43px;
+}
+
+/* Animated button */
+
+.animated-icon3 span:nth-child(1) {
+    top: 0px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(2) {
+    top: 10px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3 span:nth-child(3) {
+    top: 20px;
+    -webkit-transform-origin: left center;
+    -moz-transform-origin: left center;
+    -o-transform-origin: left center;
+    transform-origin: left center;
+  }
+  
+  .animated-icon3.open span:nth-child(1) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+    top: 0px;
+    left: 8px;
+  }
+  
+  .animated-icon3.open span:nth-child(2) {
+    width: 0%;
+    opacity: 0;
+  }
+  
+  .animated-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    top: 21px;
+    left: 8px;
+  }
+
+  .animated-icon3 {
+    width: 30px;
+    height: 21px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+  }
+
+  .animated-icon3 span {
+  height: 3px;
+  width: 100%;
+  background-color: #1DDDBC;
+  border-radius: 10px;
+  transition: 0.3s;
+  }
+
+  .menu-button {
+    background-color: #0f0f0f;
+    border: none;
+  }
+
+@media (max-width: 875px) {
+
+.animated-icon3{
+    display: flex;
+}
+
+#navbar {
+    display: none;
+}
+
+.active1 {
+    display: flex !important;
+    flex-direction: column;  
+    justify-content: center;
+    align-items: center;
+    gap: 20px !important;
+    padding: 20px !important;
+}
+
+.active2{
+ display: block;
+}
 }
