fixed more problems with responsive and picture

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -66,23 +66,21 @@ background-color: #0030ce;
 
 #socials {
     display: flex;
-    gap: 20px;
+    gap: 18px;
     margin-top: 55px;
-    margin-left: 155px;
-    height: 10px;
-    line-height: 10px;
+    font-size: 22px;
+    padding-left: 0rem;
 }
 
 #socials li a {
+    display: grid;
+    padding: 10px;
     text-decoration: none;
     color: white;
-    border-radius: 40px;
+    border-radius: 50%;
     background-color: #0037ec;
-    padding-top: 13px;
-    padding-left: 13px;
-    padding-right: 12px;
-    padding-bottom: 10px;
     border: none;
+    cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transition: 0.3s;
 }
