--- a/src/main.css
+++ b/src/main.css
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+    text-decoration: none !important;
     --bs-gutter-x: 0rem !important;
 }
+
+
 
 html {
     scroll-behavior: smooth;
