--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -8,7 +8,7 @@ color: #1DDDBC;
 .about-header {
     font-size: 40px;
     font-family: 'Orbitron', sans-serif;
-    padding-top: 150px;
+    padding-top: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,6 +17,10 @@ color: #1DDDBC;
 .age-email {
     display: flex;
     gap: 186px;
+}
+
+.about-col {
+    text-align: center;
 }
 
 .whatsapp-address {
@@ -37,16 +41,16 @@ div.about-links > * {
     padding-bottom: 8px;
 }
 
-.about-button {
-    margin-top: 40px;
-}
-
 .about-description {
     font-size: 20px;
 }
 
 .about-content-header {
     font-family: 'Orbitron', sans-serif;
+}
+
+.about-button {
+    padding-top: 40px;
 }
 
 .name {
@@ -86,7 +90,22 @@ div.about-links > * {
     padding-bottom: 15px;
 }
 
-p.paragraph {
-    text-align: justify;
-    line-height: 23px;
+.email {
+    padding-left: 52px;
 }
+
+.myLinks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+#personalpic {
+    filter: grayscale(100%);
+}
+
+#personalpic:hover {
+    filter: grayscale(0%);
+}
+
