--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -6,7 +6,7 @@
     --background-color: #0f0f0f;
 }
 
-.container-fluid {
+.navbar-container {
     position: fixed;
     z-index: 1;
     min-height: 60px;
@@ -34,9 +34,12 @@ li {
 
 #navbar {
     display: flex;
+    justify-content: end;
+    align-items: flex-end;
     gap: 35px;
     margin-bottom: 0px;
     padding-top: 6px;
+    padding-right: 8px;
 }
 
 
@@ -120,26 +123,28 @@ img {
     border: none;
   }
 
-@media (max-width: 875px) {
 
-.animated-icon3{
-    display: flex;
-}
+  @media (max-width: 890px) {
 
-#navbar {
-    display: none;
-}
-
-.active1 {
-    display: flex !important;
-    flex-direction: column;  
-    justify-content: center;
-    align-items: center;
-    gap: 20px !important;
-    padding: 20px !important;
-}
-
-.active2{
- display: block;
-}
-}
+    .animated-icon3{
+        display: flex;
+    }
+    
+    #navbar {
+        display: none;
+    }
+    
+    .active1 {
+        display: flex !important;
+        flex-direction: column !important;  
+        justify-content: center !important;
+        align-items: center !important;
+        gap: 20px !important;
+        padding: 20px !important;
+    }
+    
+    .active2{
+     display: block !important;
+    }
+    }
+  
