--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -19,10 +19,6 @@ color: #1DDDBC;
     gap: 186px;
 }
 
-.about-col {
-    text-align: center;
-}
-
 .whatsapp-address {
     display: flex;
     gap: 50px;
@@ -37,8 +33,16 @@ color: #1DDDBC;
     font-family: 'Roboto', sans-serif;
 }
 
-div.about-links > * {
-    padding-bottom: 8px;
+.about-button {
+    text-align: center;
+}
+
+.myLinks {
+    font-size: 22px;
+}
+
+#btn {
+    padding-top: 40px;
 }
 
 .about-description {
@@ -47,10 +51,6 @@ div.about-links > * {
 
 .about-content-header {
     font-family: 'Orbitron', sans-serif;
-}
-
-.about-button {
-    padding-top: 40px;
 }
 
 .name {
@@ -63,7 +63,7 @@ div.about-links > * {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border: none;
     transition: 0.3s;
-    padding: 12px;
+    padding: 14px;
     text-decoration: none;
     color: white;
     font-size: 18px;
@@ -90,22 +90,20 @@ div.about-links > * {
     padding-bottom: 15px;
 }
 
-.email {
-    padding-left: 52px;
+p.paragraph {
+    line-height: 28px;
 }
 
-.myLinks {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-}
-
-#personalpic {
+.personalpic {
     filter: grayscale(100%);
+    height: 400px;
+    width: 400px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+    transition: 0.3s;
 }
 
-#personalpic:hover {
+.personalpic:hover {
     filter: grayscale(0%);
+    transform: scale(1.1);
 }
-
